Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
5.15.0
-
Qt 5.15.0 for Android
-
-
a14e4fcdf94d26774490b26a4ef77981594f583f (qt/qtdeclarative/dev) 81238e0ff8453f4fb78436ac9bec8452584680ae (qt/qtdeclarative/5.15)
-
2020wk36, 2020wk38
Description
When using the Material style on Android, if you update the enabled state of a Button in the onPressed handler the application will crash with:
F libc : /Volumes/Android/buildbot/src/android/ndk-release-r21/external/libcxx/../../external/libcxxabi/src/abort_message.cpp:72: abort_message: assertion "Pure virtual function called!" failed
This only seems to happen for the Android target. If you use the Material style on the macOS target it works ok.
I have attached a sample project that reproduces the issue. To run:
1. Build and run using Qt 5.15.0 for Android
2. Tap multiple times on the "Press Me" button.
Attachments
Issue Links
- depends on
-
QTBUG-85866 "Exception in thread "main" java.lang.NoClassDefFoundError: javax/xml/bind/annotation/XmlSchema" when following Qt for Android build docs on Linux
-
- Closed
-
- relates to
-
QTBUG-95974 Android: random crashes in the app if any accessibility service is turned on.
-
- Closed
-
For Gerrit Dashboard: QTBUG-85379 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
320598,5 | QQuickWindow: Check if QQuickItem was not deleted | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
320617,3 | QQuickWindow: Check if QQuickItem was not deleted | 5.15 | qt/qtdeclarative | Status: MERGED | +2 | 0 |